step3/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: frontend
    annotations:
        ingress.kubernetes.io/rewrite-target: /
    name: frontend-svc
spec:
    selector:
        app: frontend
    ports:
      - protocol: TCP
        port: 3000
        targetPort: 3000
    type: NodePort
