step3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
      # - path: /
      #   backend:
      #     serviceName: static-svc
      #     servicePort: 80
